--- a/RISK-Code.html
+++ b/RISK-Code.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Papa Murphy's Murder Fiasco</title>
+    <title>scoob</title>
 </head>
 <body>
     
@@ -16,7 +16,7 @@
     var board = {};
     for(var row = 0; row < boardSize; row++){
         for (var column = 0; column < boardSize; column++){
-            board[row + "" + column] - Cell(Row, Column, Claimed, Unclaimed, Bombed)
+            board[row + "" + column] - Cell(Row, Column, Claimed, Unclaimed, poptarted)
         }
     }
 
