--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Papa Murphy's Murder Fiasco</title>
+    <title>Scooby Doo and the Cursed Poptarts</title>
 </head>
 <body>
     
@@ -15,11 +15,13 @@
     
     var board = {};
     for(var row = 0; row < boardSize; row++){
+
         for (var column = 0; column < boardSize; column++){
-            board[row + "" + column] - Cell(Row, Column, Claimed, Unclaimed, Bombed)
+
+            board[row + "" + column] - Cell(Row, Column, false, false)
         }
     }
-
+    return board;
     }
 
 
