--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -104,10 +104,10 @@ table {
 
     <script>        
         function restart(){
-
+            document.getElementById("Replay?");
         }
         function start(){
-
+            
         }
         function winCheck(){
             
