--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -104,7 +104,7 @@ table {
 
     <script>        
         function restart(){
-            document.getElementById("Replay?");
+            document.getElementById("Replay");
         }
         function start(){
             
