--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -28,7 +28,7 @@
 <head>
 <style>
     table, th, td {
-  border: 1px solid black;
+  border: 1px solid rgb(7, 183, 253);
   padding: 5px;
 }
 
@@ -43,62 +43,62 @@ table {
 </head>
 </html>
 
-    <table>
-        <tr>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-        </tr>
-        <tr>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-        </tr>
-        <tr>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-        </tr>
-        <tr>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-            <th> </th>
-        </tr>
-        <tr>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-        </tr>
-        <tr>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-        </tr>
-    </table>
+<table id="gameboard">
+    <tr>
+        <td id="c-1-1"></td>
+        <td id="c-1-2"></td>
+        <td id="c-1-3"></td>
+        <td id="c-1-4"></td>
+        <td id="c-1-5"></td>
+        <td id="c-1-6"></td>
+        <td id="c-1-7"></td>
+    </tr>
+    <tr>
+        <td id="c-2-1"></td>
+        <td id="c-2-2"></td>
+        <td id="c-2-3"></td>
+        <td id="c-2-4"></td>
+        <td id="c-2-5"></td>
+        <td id="c-2-6"></td>
+        <td id="c-2-7"></td>
+    </tr>
+    <tr>
+        <td id="c-3-1"></td>
+        <td id="c-3-2"></td>
+        <td id="c-3-3"></td>
+        <td id="c-3-4"></td>
+        <td id="c-3-5"></td>
+        <td id="c-3-6"></td>
+        <td id="c-3-7"></td>
+    </tr>
+    <tr>
+        <td id="c-4-1"></td>
+        <td id="c-4-2"></td>
+        <td id="c-4-3"></td>
+        <td id="c-4-4"></td>
+        <td id="c-4-5"></td>
+        <td id="c-4-6"></td>
+        <td id="c-4-7"></td>
+    </tr>
+    <tr>
+        <td id="c-5-1"></td>
+        <td id="c-5-2"></td>
+        <td id="c-5-3"></td>
+        <td id="c-5-4"></td>
+        <td id="c-5-5"></td>
+        <td id="c-5-6"></td>
+        <td id="c-5-7"></td>
+    </tr>
+    <tr>
+        <td id="c-6-1"></td>
+        <td id="c-6-2"></td>
+        <td id="c-6-3"></td>
+        <td id="c-6-4"></td>
+        <td id="c-6-5"></td>
+        <td id="c-6-6"></td>
+        <td id="c-6-7"></td>
+    </tr>
+</table>
             
 
 
@@ -127,3 +127,25 @@ table {
 </body>
 </html>
             
+//Copyright (c) 2013 
+
+Permission is hereby granted, free of charge, to any person
+obtaining a copy of this software and associated documentation
+files (the "Software"), to deal in the Software without
+restriction, including without limitation the rights to use,
+copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the
+Software is furnished to do so, subject to the following
+conditions:
+
+The above copyright notice and this permission notice shall be
+included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+OTHER DEALINGS IN THE SOFTWARE.
