--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -43,6 +43,19 @@ table {
 </head>
 </html>
 
+<button> "" </button>
+
+<button> "" </button>
+
+<button> "" </button>
+
+<button> "" </button>
+
+<button> "" </button>
+
+<button> "" </button>
+
+<button> "" </button>
 <table id="gameboard">
     <tr>
         <td id="c-1-1"></td>
