--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -9,15 +9,11 @@
 </head>
 <body>
     <div id="game">
-        <div id="player1"> 
-            <span>Player 1</span>
+        <div id="player 1"> 
+            <span></span>
         </div>
-        <table id="board">
-            <thead></thead>
-            <tbody></tbody>
-        </table>
         <div id="player2"> 
-            <span>Player 2</span>
+            <span></span>
         </div>
     </div>
     <div id="controls"> 
@@ -28,8 +24,10 @@
 <head>
 <style>
     table, th, td {
-  border: 1px solid rgb(7, 183, 253);
+  border: 8px solid rgb(12, 147, 201);
   padding: 5px;
+  border-color: rgb(0, 0, 0);
+  background-color: rgb(36, 168, 151);
 }
 
 td, th {
@@ -42,20 +40,20 @@ table {
 </style>
 </head>
 </html>
+<button> "row 1" </button>
 
-<button> "" </button>
+<button> "row 2" </button>
 
-<button> "" </button>
+<button> "row 3" </button>
 
-<button> "" </button>
+<button> "row 4" </button>
 
-<button> "" </button>
+<button> "row 5" </button>
 
-<button> "" </button>
+<button> "row 6" </button>
 
-<button> "" </button>
+<button> "row 7" </button>
 
-<button> "" </button>
 <table id="gameboard">
     <tr>
         <td id="c-1-1"></td>
