--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -18,7 +18,6 @@
     </div>
     <div id="controls"> 
         <span id="message"></span>
-        <button id="replay">Replay?</button>
     </div>
 <html>
 <head>
@@ -37,23 +36,36 @@ td, th {
 table {
   border-spacing: 15px;
 }
+#buttons button {
+    padding: 0.5em;
+    width: 125px;
+    margin: 5px 12px 5px 0;
+}
+#buttons button:first-child {
+    margin-left: 26px;
+}
+
+#buttons button:last-child {
+    margin-right:0 ;
+}
 </style>
 </head>
 </html>
-<button> "row 1" </button>
+<div id="buttons">
+    <button> row 1</button>
 
-<button> "row 2" </button>
+    <button> row 2 </button>
 
-<button> "row 3" </button>
+    <button> row 3 </button>
 
-<button> "row 4" </button>
+    <button> row 4 </button>
 
-<button> "row 5" </button>
+    <button> row 5 </button>
 
-<button> "row 6" </button>
+    <button> row 6 </button>
 
-<button> "row 7" </button>
-
+    <button> row 7 </button>
+</div>
 <table id="gameboard">
     <tr>
         <td id="c-1-1"></td>
