--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -146,7 +146,13 @@ button,table,#game,body,td {
         </div>
         <script src="code.min.js"></script>
 <script>
-
+let moves = -1;
+let counter = 0;
+function moveCounter (){
+    moves++;
+    counter.innerHTML = moves
+    console.log(moves);
+}
 (function(connectZoinks){
     // start function
     var start = function(){
@@ -180,6 +186,7 @@ button,table,#game,body,td {
     }, //function to swap between players                        
     changePlayer = function(){
         element("c").innerHTML = players[current = (current + 1) % 2];
+        moveCounter();
     }, // multiple win conditions like horizontal, diagonal etc                       
     horizontalWon = function(i,j){
         for(var min=j-1;min>0;min--)if(!sameColor(i,min))break;					
