--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -82,7 +82,7 @@ button,table,#game,body,td {
     <span id="a">scooby</span>
     <span id="b">shaggy</span>
     <span id="n"></span>
-    <div id="game">It's the <span id="c"></span>&nbsp;player's move.
+    <div id="game">It's <span id="c"></span>&nbsp;'s move.
         <table id="gameboard">
             <tr>
                 <td id="c-1-1"></td>
