--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -152,71 +152,83 @@ function moveCounter (){
     counter.innerHTML = moves
     console.log(moves);
 }
-(function(connectZoinks){
+(function(connectfour){
     // start function
     var start = function(){
         finished = false;
         changePlayer();
-    },	
-    newGame = function(message){
-        if (confirm(message)){
-            start();
-            forAllCells(emptyField);
-        }
-    }, // putting stuff onto html board        
-    element = function(id){
-        return connectZoinks.getElementById(id);
-    },
-    value = function(el){
-        return element(el).innerHTML;
-    },                        
-    cell = function(i,j){
-        return element("c-"+i+"-"+j);
-    },       
-    forAllCells = function(action){
-        for (var t = 1;t<7;t++){
-            for (var counter2 = 1;counter2<8;counter2++){
+    }
+function newGame(message){
+    if (confirm(message)){
+        start();
+        forAllCells(emptyField);
+}
+    } // putting stuff onto html board        
+function element(id){
+    return connectZoinks.getElementById(id);
+}
+
+function value(el){
+    return element(el).innerHTML;
+}  
+
+function cell(i,j){
+    return element("c-"+i+"-"+j);
+} 
+
+function forAllCells(action){
+    for (var t = 1;t<7;t++){
+        for (var counter2 = 1;counter2<8;counter2++){
                 action(t,counter2);
-            }
         }
-        delete me 
-    },                     
-    sameColor = function(i,j){
-        return testClass(i,j,players[current]);
-    }, //function to swap between players                        
-    changePlayer = function(){
-        element("c").innerHTML = players[current = (current + 1) % 2];
-        moveCounter();
-    }, // multiple win conditions like horizontal, diagonal etc                       
-    horizontalWon = function(i,j){
-        for(var min=j-1;min>0;min--)if(!sameColor(i,min))break;					
-        for(var max=j+1;max<8;max++)if(!sameColor(i,max))break;
-        return max-min>4;
-    },
+    }
+    
+}
+
+function sameColor(i,j){
+    return testClass(i,j,players[current]);
+} //function to swap between players          
+
+function changePlayer(){
+    element("c").innerHTML = players[current = (current + 1) % 2];
+    moveCounter();
+} // multiple win conditions like horizontal, diagonal etc      
+
+function horizontalWon(i,j){
+    for(var min=j-1;min>0;min--)if(!sameColor(i,min))break;					
+    for(var max=j+1;max<8;max++)if(!sameColor(i,max))break;
+    return max-min>4;
+}
                                 
-    verticalWon = function(i,j){
-        for(var max=i+1;max<7;max++)if(!sameColor(max,j))break;
-        return max-i>3;
-    },                        
-    diagonalLtrWon = function(i,j){
-        for(var min=i-1,t=j-1;min>0;min--,t--)if(t<1||!sameColor(min,t))break;
-        for(var max=i+1,t=j+1;max<7;max++,t++)if(t>7||!sameColor(max,t))break;
+ function verticalWon(i,j){
+for(var max=i+1;max<7;max++)if(!sameColor(max,j))break;
+    return max-i>3;
+
+}   
+
+function diagonalLtrWon(i,j){
+    for(var min=i-1,t=j-1;min>0;min--,t--)if(t<1||!sameColor(min,t))break;
+    for(var max=i+1,t=j+1;max<7;max++,t++)if(t>7||!sameColor(max,t))break;
         return max-min>4;
-    },                      
-    diagonalRtlWon = function(i,j){
-        for(var min=i-1,t=j+1;min>0;min--,t++)if(t>7||!sameColor(min,t))break;
-        for(var max=i+1,t=j-1;max<7;max++,t--)if(t<1||!sameColor(max,t))break;
-        return max-min>4;
-    },         
-    colorField = function(i,j,color){
-        cell(i,j).className = color;
-    },                      
+}
+
+function diagonalRtlWon(i,j){
+    for(var min=i-1,t=j+1;min>0;min--,t++)if(t>7||!sameColor(min,t))break;
+    for(var max=i+1,t=j-1;max<7;max++,t--)if(t<1||!sameColor(max,t))break;
+    return max-min>4;
+}
+
+function colorField(i,j,color){
+    cell(i,j).className = color;
+}
+
     emptyField = function(i,j){
         colorField(i,j,'');
-    },
-    testClass = function(i,j,value){
-        return cell(i,j).className == value;
-    },
+    }
+
+function testClass(i,j,value){
+     return cell(i,j).className == value;
+}
     addCellBehavior = function(i,j){
         cell(i,j).onclick = function(j){
             return function(){
