change file to index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ button,table,#game,body,td {
         }
     } // putting stuff onto html board        
     function element(id){
-        return doc.getElementById(id);
+        return document.getElementById(id);
     }
     function value(el){
         return element(el).innerHTML;
